# vera

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
docs/source/: conf.py  index.rst
embedding_annotation/: __init__.py  annotate.py  data.py  embedding.py  feature_selection.py  graph.py  metrics.py  plotting.py  preprocessing.py  region.py  rules.py  variables.py
notebooks/: example.ipynb
tests/: test_annotate.py  test_annotator.py  test_contrastive.py  test_data.py  test_descriptive.py  test_explain.py  test_feature_selection.py  test_graph.py  test_overfragmented_merging.py  test_preprocessing.py  test_region.py  test_region_annotation.py  test_rules.py  test_variables.py  tmp.csv  utils.py
veca/: __init__.py  annotate.py  embedding.py  explain.py  graph.py  layouts.py  metrics.py  plotting.py  preprocessing.py  region.py  rules.py  variables.py
veca/explain/: __init__.py  _contrastive.py  _descriptive.py  _layout_scores.py  descriptive.py
vera/: __init__.py  annotate.py  collections.py  embedding.py  graph.py  label_placement.py  metrics.py  plotting.py  preprocessing.py  region.py  region_annotation.py  region_annotations.py  rules.py  utils.py  variables.py
vera/explain/: __init__.py  _contrastive.py  _descriptive-v1.py  _descriptive-v2.py  _descriptive.py  _layout_scores.py
