[metadata]
name = embedding_annotation
version = 0.0.1
author = Pavlin G. PoliÄar
author_email = pavlin.g.p@gmail.com
license = BSD 3-Clause License

[options]
packages = embedding_annotation
install_requires =
    numpy
    pandas
    scipy
    scikit-learn
    KDEpy
    contourpy
    shapely
    matplotlib
