[metadata]
name = vera-explain
version = 1.0.0
url = https://github.com/pavlin-policar/vera
author = Pavlin G. Poličar
author_email = pavlin.g.p@gmail.com
license = BSD 3-Clause License

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Visualization


[options]
packages = vera
install_requires =
    numpy
    pandas
    scipy
    scikit-learn
    KDEpy
    contourpy
    shapely
    matplotlib
    glasbey
